Fixed Overlapping

--- a/style.css
+++ b/style.css
@@ -6,22 +6,25 @@ body {
   display: flex;
   flex-flow: row nowrap;
   justify-content: left;
-  overflow-y: hidden;
 }
 
 .menu {
   font-family: "Merriweather", serif;
   background-color: #0009;
-  margin: 10pt 0pt 10pt 10pt;
+  margin: 10pt;
+  width: 50pt;
+  height: 96.5vh;
+  position: fixed;
+  border-radius: 5pt;
 }
 .scroller {
-  margin: 10pt;
-  overflow-y: scroll;
+  margin: 10pt 10pt 10pt 70pt;
 }
 .textChild {
   margin: 10pt 0pt;
   font-family: "Merriweather", serif;
   background-color: #0009;
+  border-radius: 5pt;
 }
 #first {
   margin-top: 0pt;
